	* screenio.c: FR #191 only set flag pending_accept when cob_move
	  returns no error

2017-05-12  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_oc_nanosleep): prefer HAVE_NANO_SLEEP over _WIN32

2017-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (screen_display): FR #191 set flag pending_accept
	  for DISPLAY screen, too

2017-05-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler, cob_set_signal): added code for SIGBUS
	  in correspondence to SIGSEGV code

2017-04-28  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (set_value, get_value): using correcting format modifier
	  for cob_s64_t (CB_FMT_LLD)

2017-04-27 Ron Norman <rjn@inglenet.com>
	* move.c: added 'cob_alloc_move' used to copy data for BY VALUE params
	* common.c,common.h: added 'cob_get_hase_name' used to create has value
	  added 'cob_alloc_attr' to create working 'cob_field_attr'
	* call.c: set 'cobglobptr->cob_call_from_c' &
	  'cobglobptr->cob_call_name_hash' as required

2017-04-27  Sergey Kashyrin <ska@kiska.net>

	* common.c (set_value, get_value): changed type long to cob_s64_t
	  as SORT was broken on Windows

2017-04-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: always use COB_KEYWORD_INLINE (set by configure)
	  for COB_INLINE

2017-04-19  Ron Norman <rjn@inglenet.com>

	* fileio.c (indexed_read) [WITH_DB]: check that the size of a record read
	  is not larger than what the FD has defined, return status 43 to the READ.
	* fileio.c: for the callable EXTFH interface, set f->file_version
	  to COB_FILE_VERSION

2017-04-18 Ron Norman <rjn@inglenet.com>

	* fileio.c: relative_read_size returns an 'int' and not 'size_t'
	* screenio.c: add (int) casts
	* move.c: use 'int' instead of 'size_t' as it needs to be signed

2017-04-18  Ron Norman <rjn@inglenet.com>

	* numeric.c, common.c, coblocal.h: define ISFINITE depending on
	  HAVE_ISFINITE to either use 'isfinite' or 'finite' or '_finite'

2017-04-12 Ron Norman <rjn@inglenet.com>
